# faststream-compressors

./: README.md  pyproject.toml
faststream_compressors/: __init__.py  errors.py  handler.py
faststream_compressors/compressors/: __init__.py  gzip.py  lz4.py  lzma.py
faststream_compressors/middlewares/: __init__.py  nats.py
