[tool.poetry]
name = "faststream-compressors"
version = "0.1.0"
description = "A middleware for the FastStream framework to support message compression."
repository = "https://github.com/ulbwa/faststream-compressors"
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = "^0.5.18"
lz4 = {version = "^4.3.3", optional = true}

[tool.poetry.extras]
lz4 = ["lz4"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
